@@ -1,4 +1,8 @@
-﻿zg 09.01.2015 01:10:36 +0200 - build 4236
+﻿drkns 09.01.2015 19:25:37 +0200 - build 4237
+
+1. 0002849: ProcessSynchroEventW вызывается при DMODE_NOPLUGINS.
+
+zg 09.01.2015 01:10:36 +0200 - build 4236
 
 1. после закрытия меню фильтров некорректно перерисовывались панели.
 
